# church_site

./: .coveragerc  .djlintrc  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  azure-pipelines.yml  compose.yaml  copy-vendor.ps1  dev.requirements.txt  docker-compose.debug.yml  docker-compose.yml  env.example  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  robots.txt  sitemap.xml  tailwind.config.js
accounts/: forms.py  models.py  permissions.py  selectors.py  urls.py  views.py
bulletin/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
church_site/: asgi.py  env.example  mixins.py  production.py  settings.py  urls.py  views.py  wsgi.py
churches/: admin.py  apps.py  forms.py  managers.py  models.py  selectors.py  tests.py  urls.py  views.py
contactus/: admin.py  forms.py  managers.py  models.py  querysets.py  urls.py  views.py
core/: forms.py  middleware.py  urls.py  views.py
forms/: admin.py  forms.py  models.py  urls.py  views.py
home/: tests.py  views.py
memberships/: forms.py  models.py  urls.py  views.py
schedules/: admin.py  forms.py  managers.py  models.py  selectors.py  urls.py  views.py
sermons/: admin.py  apps.py  forms.py  models.py  selectors.py  urls.py  validators.py  views.py
shared/: views.py
songs/: forms.py  models.py  urls.py  views.py
speakers/: admin.py  forms.py  models.py  urls.py  views.py
streams/: admin.py  forms.py  models.py  selectors.py  urls.py  views.py
telegram/: admin.py  api_urls.py  apis.py  (+5 more)
(+179 files in other folders)
