[tool.poetry]
name = "church-site"
version = "0.1.0"
description = ""
authors = ["Daniel Braun <42745795+danielpomas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.10"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
django-allauth = "0.61.1"
dj-rest-auth = "5.0.2"
django-cors-headers = "4.3.1"
django-countries==7.5.1
django-environ = "0.11.2"
django-htmx = "1.17.3"
django-pwa = "1.1.0"
django-sendgrid-v5 = "1.2.3"
django-storages = { version = "1.14.2", extras = ["azure"] }
gunicorn = "21.2.0"
psycopg2-binary = "2.9.9"
pytelegrambotapi = "4.16.1"
whitenoise = "6.6.0"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
coverage = "7.4.3"
djlint = "1.34.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
